@@ -1,3 +1,8 @@
+2004-12-03 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/GParted_Core.cc: When ( ! deep_scan ) now only one device is scanned (first found one). Shaves off a couple of millisec from startuptime |-)
+	* src/Win_GParted.cc: Fixed small bug with removable devices and the devicemenu. Also fixed redundant calling of 2 functions.
+
 2004-12-02 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Win_GParted.cc,
